force-app/main/default/objects/PWChrono_Employee_Separation__c/PWChrono_Employee_Separation__c.object-meta.xml
<CustomObject>
    <label>Employee Separation</label>
    <nameField>
        <displayFormat>SEP-{0000}</displayFormat>
        <label>Separation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Separations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>