force-app/main/default/objects/PWChrono_Employee_Separation__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <type>Lookup</type>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipName>PWChrono_Employee_Separations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>