force-app/main/default/objects/PWChrono_Employee_Separation__c/fields/Reason_for_Leaving__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Leaving__c</fullName>
    <label>Reason for Leaving</label>
    <type>TextArea</type>
</CustomField>