force-app/main/default/objects/PWChrono_Employee_Separation__c/fields/Resignation_Letter_Date__c.field-meta.xml
<CustomField>
    <fullName>Resignation_Letter_Date__c</fullName>
    <label>Resignation Letter Date</label>
    <type>Date</type>
</CustomField>