force-app/main/default/objects/PWChrono_Employee_Separation__c/fields/Separation_Template__c.field-meta.xml
<CustomField>
    <fullName>Separation_Template__c</fullName>
    <label>Separation Template</label>
    <type>Lookup</type>
    <referenceTo>PWChrono_Separation_Template__c</referenceTo>
    <relationshipName>Employee_Separations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>